--- a/win_app_info/info.rc
+++ b/win_app_info/info.rc
@@ -13,7 +13,7 @@ BEGIN
 			VALUE "LegalCopyright", "Snqzs' PG"
 			VALUE "OriginalFilename", "waidle.exe"
 			VALUE "ProductName", "Wordle Aidle"
-			VALUE "ProductVersion", "snapshot-202205290314"
+			VALUE "ProductVersion", "0.4"
 		END
 	END
 	BLOCK "VarFileInfo"
